2007-06-25  Aaron Stone  <aaron@serendipity.cx>

	* imap4.c, lmtp.c, pop3.c, timsieve.c, man/dbmail.conf.txt:
	Added configurable login banner (closes bug #611)
	* pop3.c, dbmail.conf, serverparent.c, timsieve.c, serverchild.c,
	lmtp.c, dbmailtypes.h, server.c, dbmail-imapsession.c,
	dbmail-imapsession.h:
	Added configurable login timeout (closes bug #612)

2007-06-24  Aaron Stone  <aaron@serendipity.cx>

	* sort.c:
	Resolved a trivial compiler warning.
	* dbmail-user.c:
	List forwards as part of 'dbmail-user -l' output (closes bug #605)
	* auth.h, authmodule.h, authmodule.c, modules/authsql.c,
	modules/authldap.c:
	New function auth_get_known_aliases.
	* list.h, list.c:
	New function g_list_dedup.
	* man/fixsp.pl, man/Makefile.am:
	Added a Perl script to fix the man page output.

2007-06-23  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-mailbox.c, serverparent.c, 
	test-scripts/testimap.py:
	fixing leaks
	* dbmail-imapsession.c, dbmail-mailbox.c, imapcommands.c:
	add some checks to avoid segfaults
	* imapcommands.c:
	issue BAD for thread=references
	* dbmail-imapsession.c:
	silence false error

2007-06-22  Aaron Stone  <aaron@serendipity.cx>

	* server.c:
	Reopen log files after a HUP (closes bug #615)

2007-06-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	collapse BETWEEN clause if hi and low values are equal
	* dbmail.conf, imapcommands.c:
	allow override of CAPABILITY message so people can disable stuff like 
	IDLE

2007-06-19  Paul Stevens <paul@nfg.nl>

	* modules/authldap.c, serverchild.c:
	add sigpipe handling during ldap disconnect
	* dbmail-imapsession.c, dbmail.conf:
	add idle_timeout to dbmail.conf
	* db.c, dbmailtypes.h, modules/dbmysql.c, modules/dbpgsql.c, 
	modules/dbsqlite.c:
	add timewindow to suppress_duplicate detection

2007-06-18  Paul Stevens <paul@nfg.nl>

	* sort.c:
	log suppress_duplicate at TRACE_MESSAGE
	* ChangeLog, dbmail.conf, sort.c:
	add suppress_duplicate to dbmail.conf
	* db.c: